k8s/4_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faux-operator
  namespace: faux-operator
spec:
  selector:
    matchLabels:
      app: faux-operator
  replicas: 2
  template:
    metadata:
      labels:
        app: faux-operator
    spec:
      serviceAccountName: faux-operator
      volumes:
        - name: keystore
          secret:
            secretName: faux-operator-keystore
      containers:
        - name: faux-operator
          image: image-registry.openshift-image-registry.svc:5000/faux-operator/faux-operator:latest
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
          volumeMounts:
            - mountPath: /opt/keystore
              name: keystore
              readOnly: true
          startupProbe:
            httpGet:
              port: 8080
              scheme: HTTP
              path: /health/ready
          livenessProbe:
            httpGet:
              port: 8080
              scheme: HTTP
              path: /health/live
          resources:
            limits:
              # Don't limit CPU unless you're forced to. It usually even outs in the cluster and CPU is compressible.
              # cpu: 500m
              # RAM limit should be the same as requested. RAM is not compressible and most apps see
              # the cgroup limits, not requested RAM! Apps don't survive when we pretend that there is RAM which isn't available.
              memory: 768Mi
            requests:
              # Set what your app needs during normal operation, no less
              # (and hope that you might end on a node that has a bit more "left")
              cpu: 50m
              # Set request and limit RAM to the same. Account not only for heap but also stacks, sockets, file handles, gc cache,
              # metaspace and so on.
              memory: 768Mi

---
apiVersion: v1
kind: Service
metadata:
  name: faux-operator
  namespace: faux-operator
spec:
  selector:
    app: faux-operator
  ports:
    - port: 8443
