k8s/5_vwh.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.samples.com.github.danpfe.eclipsecon
webhooks:
  - name: validation.samples.com.github.danpfe.eclipsecon
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - com.github.danpfe.eclipsecon
        apiVersions:
          - v1
        resources:
          - samples
        scope: Namespaced
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: faux-operator
        namespace: faux-operator
        port: 8443
        path: /faux-operator/validation
      # It's simply our PEM-formatted throw-away self-signed certificate that Kubernetes must trust (base64-encoded!)
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtRENDQW9DZ0F3SUJBZ0lFWTAxczZ6QU5CZ2txaGtpRzl3MEJBUXNGQURBcU1TZ3dKZ1lEVlFRRERCOW0KWVhWNExXOXdaWEpoZEc5eUxtWmhkWGd0YjNCbGNtRjBiM0l1YzNaak1DQVhEVEl5TVRBeE56RTBOVFV6T1ZvWQpEekl3TnpJeE1ERTNNVFExTlRNNVdqQXFNU2d3SmdZRFZRUUREQjltWVhWNExXOXdaWEpoZEc5eUxtWmhkWGd0CmIzQmxjbUYwYjNJdWMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXBkTTYKdkduMGJyd2d6ZnFUUnYwQ3FaRGxDQTYrRUZlWThpSDlIRmtxUm1FQVFsR0w4Z2VERXM0YzRrMDQySE5NUzE3RQpxbDFjYTZxVVli [...]
    sideEffects: None
